--- a/OpenPeerSampleApp/res/layout/item_contact.xml
+++ b/OpenPeerSampleApp/res/layout/item_contact.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="@dimen/padding_spacing_internal"
         android:layout_toRightOf="@id/image_view" />
 
-    <ImageView
+    <ImageView android:visibility="gone"
         android:id="@+id/chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
