--- a/OpenPeerSampleApp/res/layout/fragment_chat.xml
+++ b/OpenPeerSampleApp/res/layout/fragment_chat.xml
@@ -1,33 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="1" >
+        android:weightSum="1">
 
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:divider="@null" >
+            android:divider="@null">
         </ListView>
 
         <LinearLayout
             android:id="@+id/layout_compose"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
+
+            <ImageButton
+                android:id="@+id/camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_action_camera"/>
 
             <EditText
                 android:id="@+id/text"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:hint="@string/hint_compose" />
+                android:hint="@string/hint_compose"/>
 
             <Button
                 android:id="@+id/send"
@@ -35,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:text="@string/label_send" />
+                android:text="@string/label_send"/>
         </LinearLayout>
     </LinearLayout>
 
